# gambit-ai

./: .editorconfig  pyproject.toml  ruff.toml
src/gambitai/: main.py
src/gambitai/ecs/: components.py
src/tests/: test_components.py
