[project]
name = "gambit-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Matheus Abdias", email = "matheusfabdias@gmail.com" }]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.11.9",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = 'import-untyped'
exclude = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
